--- a/derelict_hynxc6.calendarscraper.json
+++ b/derelict_hynxc6.calendarscraper.json
@@ -1,12 +1,12 @@
 {
 	"_id": "derelict_hynxc6.calendarscraper",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "derelict_hynxc6.calendarscraper",
 	"sector": "K_7008",
 	"sec_level": 4,
 	"date_added": 1565503257030,
-	"last_scraped": 1568970201098,
+	"last_scraped": 1570660490769,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 7,
-	"next_scrape": 1569015425016,
+	"next_scrape": 1570700132374,
 	"category": "coin_flipper",
-	"last_update": 1568970201098,
+	"last_update": 1570660490769,
 	"output": [
 		{
 			"args": {},
-			"calls": 530439,
+			"calls": 534590,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"e isn",
@@ -61,6 +61,6 @@
 			]
 		}
 	],
-	"updt": 1568965047808,
-	"edit": 49
+	"updt": 1568970237602,
+	"edit": 50
 }
