--- a/uknown_28mx3w.bot_scam_do_not_run.json
+++ b/uknown_28mx3w.bot_scam_do_not_run.json
@@ -1,33 +1,41 @@
 {
 	"_id": "uknown_28mx3w.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_28mx3w.bot_scam_do_not_run",
 	"sector": "K_3804",
 	"sec_level": 4,
 	"date_added": 1564555767749,
-	"last_scraped": 1568879875240,
+	"last_scraped": 1570659867773,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564555767749
 		}
 	],
-	"next_scrape": 1568920274436,
+	"next_scrape": 1570703752222,
 	"category": "coin_flipper",
-	"last_update": 1568879875240,
+	"last_update": 1570659867773,
 	"output": [
 		{
 			"args": {},
-			"calls": 2768246,
+			"calls": 2776135,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
+				"tor s",
 				"that ",
+				"hat o",
+				"ares ",
+				" serv",
 				"ke a l",
 				" okay.",
+				"vice 'C",
+				"ollapse",
+				"SINGAPO",
 				", thoug",
 				" It's g",
 				"ht now? ",
+				"e has co",
 				"ary, tho",
 				"? ## It'"
 			],
@@ -63,6 +71,6 @@
 			]
 		}
 	],
-	"updt": 1568872746186,
-	"edit": 267
+	"updt": 1568880000352,
+	"edit": 268
 }
