--- a/uknown_ax85yb.bot_scam_do_not_run.json
+++ b/uknown_ax85yb.bot_scam_do_not_run.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_ax85yb.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_ax85yb.bot_scam_do_not_run",
 	"sector": "SPC_0043",
 	"sec_level": 4,
 	"date_added": 1565687108587,
-	"last_scraped": 1568926892446,
+	"last_scraped": 1570660159406,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,23 +14,27 @@
 		}
 	],
 	"scrape_ct": 14,
-	"next_scrape": 1568972527507,
+	"next_scrape": 1570702778127,
 	"category": "coin_flipper",
-	"last_update": 1568926892446,
+	"last_update": 1570660159406,
 	"output": [
 		{
 			"args": {},
-			"calls": 769359,
+			"calls": 779080,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
+				"m ## ",
 				" a th",
 				"to the",
+				"she a ",
 				"e syst",
+				"threat ",
 				"reat to",
 				"eat to ",
 				" the se",
 				"y of the",
-				"urity of"
+				"urity of",
+				"## Well,"
 			],
 			"hits": [
 				{
@@ -64,6 +68,6 @@
 			]
 		}
 	],
-	"updt": 1568921297975,
-	"edit": 80
+	"updt": 1568926933757,
+	"edit": 81
 }
