--- a/uknown_b23kas.com.json
+++ b/uknown_b23kas.com.json
@@ -1,33 +1,37 @@
 {
 	"_id": "uknown_b23kas.com",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_b23kas.com",
 	"sector": "NGC_2512",
 	"sec_level": 4,
 	"date_added": 1565099817917,
-	"last_scraped": 1568982197977,
+	"last_scraped": 1570660601264,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565099817917
 		}
 	],
-	"next_scrape": 1569024505316,
+	"next_scrape": 1570701170181,
 	"category": "coin_flipper",
-	"last_update": 1568982197977,
+	"last_update": 1570660601264,
 	"output": [
 		{
 			"args": {},
-			"calls": 2077533,
+			"calls": 2089221,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"to for",
-				"AK is ",
 				"158 fa",
+				". BREA",
 				" up to",
 				"s playe",
-				"is play"
+				"olves a",
+				"is play",
+				"up to fo",
+				"REAK is ",
+				"BREAK is"
 			],
 			"hits": [
 				{
@@ -57,6 +61,6 @@
 			]
 		}
 	],
-	"updt": 1568982189888,
-	"edit": 209
+	"updt": 1568982414884,
+	"edit": 210
 }
