--- a/uknown_el1qyf.bot_brain.json
+++ b/uknown_el1qyf.bot_brain.json
@@ -6,16 +6,16 @@
 	"sector": "NGC_1037",
 	"sec_level": 4,
 	"date_added": 1564288470169,
-	"last_scraped": 1568899158309,
+	"last_scraped": 1570660037242,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564288470169
 		}
 	],
-	"next_scrape": 1568942783919,
+	"next_scrape": 1570700732869,
 	"category": "plant_sim",
-	"last_update": 1568899158309,
+	"last_update": 1570660037242,
 	"output": [
 		{
 			"args": {},
@@ -71,16 +71,23 @@
 		},
 		{
 			"args": {},
-			"calls": 144707,
+			"calls": 145924,
 			"base": "c:\"tt4u3n\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"ying ",
 				"e, Ma",
+				"rin R.",
+				"e, use",
 				"213 Go",
+				"playing",
 				"n R.\\n2",
 				"ds.\\n22",
 				" cards.",
-				"ser Erin"
+				"ser Erin",
+				"oodbye, ",
+				"\\n2207 H",
+				"Have fun",
+				".\\n2207 "
 			],
 			"hits": [
 				{
@@ -116,6 +123,6 @@
 			]
 		}
 	],
-	"updt": 1568892649180,
-	"edit": 188
+	"updt": 1568899192502,
+	"edit": 189
 }
