--- a/uknown_ewk6vx.libdb.json
+++ b/uknown_ewk6vx.libdb.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_ewk6vx.libdb",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_ewk6vx.libdb",
 	"sector": "HJG_7617",
 	"sec_level": 4,
 	"date_added": 1566226212198,
-	"last_scraped": 1568990640063,
+	"last_scraped": 1570660682048,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,21 +14,27 @@
 		}
 	],
 	"scrape_ct": 6,
-	"next_scrape": 1569033963090,
+	"next_scrape": 1570705979912,
 	"category": "coin_flipper",
-	"last_update": 1568990640063,
+	"last_update": 1570660682048,
 	"output": [
 		{
 			"args": {},
-			"calls": 1527090,
+			"calls": 1532136,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"y tak",
 				"to ac",
+				"at, a",
 				"ake y",
 				"0X82_",
 				" face",
+				"soluti",
+				"oo gre",
 				"nd too",
+				"mminen",
+				"inent,",
+				"eople ",
 				"NETW E",
 				"F_FILE",
 				"B2\\nSY",
@@ -153,6 +159,6 @@
 			]
 		}
 	],
-	"updt": 1568986025355,
-	"edit": 176
+	"updt": 1568990800742,
+	"edit": 177
 }
