--- a/uknown_gfh12g.a.json
+++ b/uknown_gfh12g.a.json
@@ -1,21 +1,21 @@
 {
 	"_id": "uknown_gfh12g.a",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_gfh12g.a",
 	"sector": "VNP_7825",
 	"sec_level": 4,
 	"date_added": 1566480192852,
-	"last_scraped": 1568940781600,
+	"last_scraped": 1570660240365,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566480192852
 		}
 	],
-	"next_scrape": 1568984595735,
+	"next_scrape": 1570704505969,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1568940781600,
+	"last_update": 1570660240365,
 	"output": [
 		{
 			"args": {},
@@ -45,7 +45,7 @@
 		},
 		{
 			"args": {},
-			"calls": 151499,
+			"calls": 153264,
 			"base": "YOU COULD WIN 4K537GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
 			"fragments": [
 				" Mallo",
@@ -70,8 +70,8 @@
 			]
 		}
 	],
-	"updt": 1568932343036,
-	"edit": 69,
+	"updt": 1568940915621,
+	"edit": 70,
 	"pl_output": "YOU COULD WIN 1GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
 	"identified": [
 		{
