--- a/uknown_rhkdnz.sortupgrades.json
+++ b/uknown_rhkdnz.sortupgrades.json
@@ -1,37 +1,41 @@
 {
 	"_id": "uknown_rhkdnz.sortupgrades",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_rhkdnz.sortupgrades",
 	"sector": "SPC_6536",
 	"sec_level": 4,
 	"date_added": 1564761469085,
-	"last_scraped": 1568948329222,
+	"last_scraped": 1570660278635,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564761469085
 		}
 	],
-	"next_scrape": 1568994915011,
+	"next_scrape": 1570701998960,
 	"category": "coin_flipper",
-	"last_update": 1568948329222,
+	"last_update": 1570660278635,
 	"output": [
 		{
 			"args": {},
-			"calls": 1537340,
+			"calls": 1547454,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"u fou",
 				"s con",
-				"re ar",
 				"pictu",
-				" be s",
 				"fth yo",
+				".' 'Th",
 				"'There",
+				"t be su",
 				"nsensus",
+				"ere are",
 				"aria mu",
-				"consensu"
+				"ur smile",
+				"here is ",
+				"consensu",
+				" four sm"
 			],
 			"hits": [
 				{
@@ -69,6 +73,6 @@
 			]
 		}
 	],
-	"updt": 1568941141308,
-	"edit": 134
+	"updt": 1568948353849,
+	"edit": 135
 }
