--- a/uknown_rubp2z.side.json
+++ b/uknown_rubp2z.side.json
@@ -1,21 +1,21 @@
 {
 	"_id": "uknown_rubp2z.side",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_rubp2z.side",
 	"sector": "K_0199",
 	"sec_level": 4,
 	"date_added": 1564014839075,
-	"last_scraped": 1568932154104,
+	"last_scraped": 1570660189298,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564014839075
 		}
 	],
-	"next_scrape": 1568972713217,
+	"next_scrape": 1570701827004,
 	"category": "plant_sim",
-	"last_update": 1568932154104,
+	"last_update": 1570660189298,
 	"output": [
 		{
 			"args": {},
@@ -83,22 +83,31 @@
 		},
 		{
 			"args": {},
-			"calls": 140169,
+			"calls": 141047,
 			"base": "c:\"xbk5u7\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
+				"n an ",
+				"like ",
 				" an A",
+				" Imag",
 				"to tra",
+				"that t",
+				"t's a ",
 				"s a ta",
 				"hinks ",
 				"at's a",
+				"aleem.",
 				"ain an",
 				" AI de",
+				"y. ## I",
 				"tology.",
 				"at thin",
 				"an AI t",
 				"I desig",
 				"t thinks",
+				"ner, Sal",
 				"n AI tha",
+				"ike a pa",
 				"arty pla",
 				"a tautol"
 			],
@@ -126,8 +135,8 @@
 			]
 		}
 	],
-	"updt": 1568932117909,
-	"edit": 195,
+	"updt": 1568932343036,
+	"edit": 196,
 	"identified": [
 		{
 			"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
