--- a/uknown_xf2dal.pub_info_o8aw40.json
+++ b/uknown_xf2dal.pub_info_o8aw40.json
@@ -6,16 +6,16 @@
 	"sector": "SPC_8841",
 	"sec_level": 4,
 	"date_added": 1565482044943,
-	"last_scraped": 1568920390983,
+	"last_scraped": 1570660138601,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565482044943
 		}
 	],
-	"next_scrape": 1568963801906,
+	"next_scrape": 1570699788001,
 	"category": "plant_sim",
-	"last_update": 1568920390983,
+	"last_update": 1570660138601,
 	"output": [
 		{
 			"args": {},
@@ -47,11 +47,16 @@
 		},
 		{
 			"args": {},
-			"calls": 52121,
+			"calls": 52745,
 			"base": "c:\"4ktela\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
+				"ust b",
+				"st be",
 				"when c",
 				"rds mu",
+				"begins",
+				"ards m",
+				" face d",
 				"t\\n2168 ",
 				"ds must ",
 				"TRAP car",
@@ -94,6 +99,6 @@
 			]
 		}
 	],
-	"updt": 1568914532619,
-	"edit": 81
+	"updt": 1568920395691,
+	"edit": 82
 }
