--- a/unknown_857ztx.log.json
+++ b/unknown_857ztx.log.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_857ztx.log",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_857ztx.log",
 	"sector": "K_4785",
 	"sec_level": 4,
 	"date_added": 1565855292286,
-	"last_scraped": 1568956521291,
+	"last_scraped": 1570660430784,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 18,
-	"next_scrape": 1569000495528,
+	"next_scrape": 1570700308200,
 	"category": "plant_sim",
-	"last_update": 1568956521291,
+	"last_update": 1570660430784,
 	"output": [
 		{
 			"args": {},
@@ -129,6 +129,19 @@
 				"irza | S",
 				"USER mho"
 			]
+		},
+		{
+			"args": {},
+			"calls": 960,
+			"base": "c:\"yt4lgn\" d:\"<f l n s w>\"\n\n\n\n\n                \n                Ã Ã\n                ÃÃ\n                ",
+			"fragments": [
+				"i smi",
+				"ter im",
+				"SUBJ: ",
+				"a | SUBJ",
+				"SER mhol",
+				" USER mh"
+			]
 		}
 	],
 	"identified": [
@@ -147,6 +160,6 @@
 			]
 		}
 	],
-	"updt": 1568951064786,
-	"edit": 178
+	"updt": 1568957152824,
+	"edit": 179
 }
