--- a/unknown_8xqncq.lights.json
+++ b/unknown_8xqncq.lights.json
@@ -1,37 +1,40 @@
 {
 	"_id": "unknown_8xqncq.lights",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_8xqncq.lights",
 	"sector": "VNP_5176",
 	"sec_level": 4,
 	"date_added": 1563964441642,
-	"last_scraped": 1568954079904,
+	"last_scraped": 1570660370909,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563964441642
 		}
 	],
-	"next_scrape": 1568997796786,
+	"next_scrape": 1570703182725,
 	"category": "dice_roller",
-	"last_update": 1568954079904,
+	"last_update": 1570660370909,
 	"output": [
 		{
 			"args": {},
-			"calls": 2615513,
+			"calls": 2618746,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
-				"ours.",
-				" Work",
 				"ere ou",
 				": You'",
+				"t\\n1E4B",
 				"rs. Wor",
+				" of hou",
+				" Workin",
 				"u're her",
 				"re here ",
 				"ore: You",
+				"g agains",
 				"Working ",
 				"E4B of h",
+				" hours. ",
 				"ainst\\n1E"
 			],
 			"hits": [
@@ -72,6 +75,6 @@
 			]
 		}
 	],
-	"updt": 1568948581042,
-	"edit": 249
+	"updt": 1568954447908,
+	"edit": 250
 }
