--- a/unknown_jryjpv.vet.json
+++ b/unknown_jryjpv.vet.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_jryjpv.vet",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_jryjpv.vet",
 	"sector": "K_9556",
 	"sec_level": 4,
 	"date_added": 1559426750463,
-	"last_scraped": 1568976040628,
+	"last_scraped": 1570660570697,
 	"script_log": [
 		{
 			"type": "added",
@@ -26,31 +26,38 @@
 		]
 	],
 	"pl_output": "\n\t\tWelcome to Vet v0.1.0, a `LFULLSEC` defensive security tool by sy. \n\t\tTo start vetting users and scripts, first make macros:\n\n\t\t/vet = sy.vet {{ name: \"{0}\" }}\n\n\t\tThen call it with /vet pica or /vet sy.vet \n",
-	"next_scrape": 1569022776027,
-	"updt": 1568971364486,
-	"edit": 372,
+	"next_scrape": 1570705754548,
+	"updt": 1568976098237,
+	"edit": 373,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1568976040628,
+	"last_update": 1570660570697,
 	"output": [
 		{
 			"args": {},
-			"calls": 30228718,
+			"calls": 30411101,
 			"base": "\n\t\tWelcome to Vet v0.1.0, a `LFULLSEC` defensive security tool by sy. \n\t\tTo start vetting users and scripts, first make macros:\n\n\t\t/vet = sy.vet {{ name: \"{0}\" }}\n\n\t\tThen call it with /vet pica or /vet sy.vet \n",
 			"fragments": [
 				"is na",
 				"hen a",
+				"e sur",
 				"a map",
 				" even",
 				"ed whe",
+				"ecurit",
 				"awing ",
 				"ade. D",
 				"t be su",
+				"ricade.",
 				"our dig",
+				"or us, ",
+				"l, the ",
 				"he kick",
 				"for the",
 				"and con",
+				" narrow",
 				"of a bal",
 				"o not be",
+				"Do not b",
 				" a barri"
 			],
 			"hits": [
