--- a/uknown_9zvqnm.riot.json
+++ b/uknown_9zvqnm.riot.json
@@ -1,31 +1,36 @@
 {
 	"_id": "uknown_9zvqnm.riot",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_9zvqnm.riot",
 	"sector": "NGC_7257",
 	"sec_level": 4,
 	"date_added": 1565391280951,
-	"last_scraped": 1569002503599,
+	"last_scraped": 1570660701824,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565391280951
 		}
 	],
-	"next_scrape": 1569045838157,
+	"next_scrape": 1570704752399,
 	"category": "dice_roller",
-	"last_update": 1569002503599,
+	"last_update": 1570660701824,
 	"output": [
 		{
 			"args": {},
-			"calls": 549675,
+			"calls": 553965,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
+				"F_CLS",
 				"9 We ",
-				"A_SECT",
+				"_CLST0",
+				"T0XBF_C",
+				"LE0X2BC",
 				"E0X2BC7",
+				"A_SECT0",
 				"0XF227_",
+				"X2BC7D17",
 				"FILE0X2B",
 				" take tu",
 				"e turns\\n"
@@ -46,8 +51,8 @@
 			]
 		}
 	],
-	"updt": 1568998251590,
-	"edit": 53,
+	"updt": 1569002539140,
+	"edit": 54,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
