--- a/uknown_dk37v3.npcs.json
+++ b/uknown_dk37v3.npcs.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_dk37v3.npcs",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_dk37v3.npcs",
 	"sector": "SPC_4016",
 	"sec_level": 4,
 	"date_added": 1566817634405,
-	"last_scraped": 1568971627525,
+	"last_scraped": 1570660522340,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 7,
-	"next_scrape": 1569016945687,
+	"next_scrape": 1570703247342,
 	"category": "plant_sim",
-	"last_update": 1568971627525,
+	"last_update": 1570660522340,
 	"output": [
 		{
 			"args": {},
@@ -113,6 +113,21 @@
 				"p.\\n2041",
 				" 3 decks"
 			]
+		},
+		{
+			"args": {},
+			"calls": 462,
+			"base": "c:\"mgvlps\" d:\"<f l n s w>\"\n**\n\n\n\n               \n                Ã\n               ÃÁÁo\n                ÃÃ\n               ",
+			"fragments": [
+				"al 3 ",
+				", fac",
+				"Deal 3",
+				"13, fa",
+				" face ",
+				" 13, f",
+				" of 13,",
+				"l 3 deck"
+			]
 		}
 	],
 	"identified": [
@@ -127,6 +142,6 @@
 			]
 		}
 	],
-	"updt": 1568971591032,
-	"edit": 151
+	"updt": 1568971816462,
+	"edit": 152
 }
