--- a/uknown_xb5p8t.mud.json
+++ b/uknown_xb5p8t.mud.json
@@ -1,32 +1,41 @@
 {
 	"_id": "uknown_xb5p8t.mud",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_xb5p8t.mud",
 	"sector": "VNP_3290",
 	"sec_level": 4,
 	"date_added": 1564665103923,
-	"last_scraped": 1568947977177,
+	"last_scraped": 1570660270437,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564665103923
 		}
 	],
-	"next_scrape": 1568990633358,
+	"next_scrape": 1570704653420,
 	"category": "dice_roller",
-	"last_update": 1568947977177,
+	"last_update": 1570660270437,
 	"output": [
 		{
 			"args": {},
-			"calls": 1507536,
+			"calls": 1511851,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"of an",
 				"igmat",
 				"at sh",
+				"an aca",
+				" would",
+				"tool. W",
+				"the con",
+				"t role.",
+				"oes, in",
 				"hat und",
 				"Faythe ",
+				" academ",
+				"t - to t",
+				"she has ",
 				"or susta",
 				"ons that",
 				"n that r",
@@ -134,6 +143,6 @@
 			]
 		}
 	],
-	"updt": 1568941141308,
-	"edit": 137
+	"updt": 1568948130111,
+	"edit": 138
 }
