--- a/uknown_4ild70.market.json
+++ b/uknown_4ild70.market.json
@@ -1,35 +1,37 @@
 {
 	"_id": "uknown_4ild70.market",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_4ild70.market",
 	"sector": "NGC_4040",
 	"sec_level": 4,
 	"date_added": 1565595001116,
-	"last_scraped": 1569062715016,
+	"last_scraped": 1570661477184,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565595001116
 		}
 	],
-	"next_scrape": 1569104193619,
+	"next_scrape": 1570705450295,
 	"category": "coin_flipper",
-	"last_update": 1569062715016,
+	"last_update": 1570661477184,
 	"output": [
 		{
 			"args": {},
-			"calls": 2312001,
+			"calls": 2319278,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"se, s",
 				"y\\n203",
-				"f cour",
 				"7 Seco",
 				".\\n203",
 				"ourse, ",
-				"e, sorr",
-				"istribut"
+				"istribut",
+				"e, sorry",
+				"ards.\\n2",
+				"2037 Sec",
+				" Of cour"
 			],
 			"hits": [
 				{
@@ -63,6 +65,6 @@
 			]
 		}
 	],
-	"updt": 1569059881009,
-	"edit": 236
+	"updt": 1569062814148,
+	"edit": 237
 }
