--- a/uknown_esonx7.bot_scam_do_not_run.json
+++ b/uknown_esonx7.bot_scam_do_not_run.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_esonx7.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_esonx7.bot_scam_do_not_run",
 	"sector": "K_2655",
 	"sec_level": 4,
 	"date_added": 1565252782525,
-	"last_scraped": 1569043937255,
+	"last_scraped": 1570661045409,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565252782525
 		}
 	],
-	"updt": 1569039749172,
-	"edit": 173,
-	"next_scrape": 1569088227468,
+	"updt": 1569044773419,
+	"edit": 174,
+	"next_scrape": 1570705168350,
 	"category": "dice_roller",
-	"last_update": 1569043937255,
+	"last_update": 1570661045409,
 	"output": [
 		{
 			"args": {},
-			"calls": 1688079,
+			"calls": 1692037,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"ou ar",
