--- a/uknown_ido5g4.free_vbucks.json
+++ b/uknown_ido5g4.free_vbucks.json
@@ -1,33 +1,41 @@
 {
 	"_id": "uknown_ido5g4.free_vbucks",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_ido5g4.free_vbucks",
 	"sector": "K_2748",
 	"sec_level": 4,
 	"date_added": 1564080977341,
-	"last_scraped": 1569055253160,
+	"last_scraped": 1570661305341,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564080977341
 		}
 	],
-	"next_scrape": 1569097692687,
+	"next_scrape": 1570702359072,
 	"category": "coin_flipper",
-	"last_update": 1569055253160,
+	"last_update": 1570661305341,
 	"output": [
 		{
 			"args": {},
-			"calls": 1710468,
+			"calls": 1714700,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
+				"to he",
 				"sence",
+				"s tha",
+				"on. S",
 				"o her",
 				"mon f",
+				"metim",
+				"tion. ",
 				"times ",
 				"process",
+				"ntal es",
 				"iod of ",
+				"actor i",
+				"trix pro",
 				"she test",
 				"r. Somet",
 				"n factor",
@@ -69,6 +77,6 @@
 			]
 		}
 	],
-	"updt": 1569051536930,
-	"edit": 165
+	"updt": 1569055595042,
+	"edit": 166
 }
