--- a/uknown_ypswbu.gbdis.json
+++ b/uknown_ypswbu.gbdis.json
@@ -1,27 +1,31 @@
 {
 	"_id": "uknown_ypswbu.gbdis",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_ypswbu.gbdis",
 	"sector": "NGC_1037",
 	"sec_level": 4,
 	"date_added": 1564248854714,
-	"last_scraped": 1569061670326,
+	"last_scraped": 1570661384728,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564248854714
 		}
 	],
-	"next_scrape": 1569105294394,
+	"next_scrape": 1570707162598,
 	"category": "coin_flipper",
-	"last_update": 1569061670326,
+	"last_update": 1570661384728,
 	"output": [
 		{
 			"args": {},
-			"calls": 2362680,
+			"calls": 2371383,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
+				"TIME ",
+				"R | T",
+				"FT0X1",
+				"| TIME",
 				"ROG ER",
 				"R | NE",
 				"G ERRO",
@@ -33,6 +37,7 @@
 				"T0XE23E_",
 				"SYST ERR",
 				"IME ERRO",
+				"FILE0X52",
 				"0X5282A9",
 				"\\nSYST ER"
 			],
@@ -88,6 +93,6 @@
 			]
 		}
 	],
-	"updt": 1569058528851,
-	"edit": 221
+	"updt": 1569061684160,
+	"edit": 222
 }
