--- a/unknown_aprmr6.acct.json
+++ b/unknown_aprmr6.acct.json
@@ -1,43 +1,51 @@
 {
 	"_id": "unknown_aprmr6.acct",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_aprmr6.acct",
 	"sector": "SPC_7402",
 	"sec_level": 4,
 	"date_added": 1562756729085,
-	"last_scraped": 1569051898901,
+	"last_scraped": 1570661193701,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562756729085
 		}
 	],
-	"next_scrape": 1569093811243,
+	"next_scrape": 1570706880583,
 	"category": "dice_roller",
-	"last_update": 1569051898901,
+	"last_update": 1570661193701,
 	"output": [
 		{
 			"args": {},
-			"calls": 3867900,
+			"calls": 3874969,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"you w",
+				"n try",
 				" to m",
+				" and ",
 				"o talk",
+				"just a",
 				"have t",
 				"ail ho",
+				"ugh to ",
 				"talk ab",
 				"sometim",
 				"il home",
+				"gry ins",
+				"enough ",
 				"# Provi",
 				" Provin",
 				"out? ## ",
+				"ostalgic",
 				"o - what",
 				"ng. Spec",
 				"ecifical",
 				"cally: w",
-				"ant to t"
+				"ant to t",
+				"and if y"
 			],
 			"hits": [
 				{
@@ -87,6 +95,6 @@
 			]
 		}
 	],
-	"updt": 1569048382145,
-	"edit": 390
+	"updt": 1569051989599,
+	"edit": 391
 }
