--- a/unknown_hz6ahx.scam.json
+++ b/unknown_hz6ahx.scam.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_hz6ahx.scam",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_hz6ahx.scam",
 	"sector": "K_4785",
 	"sec_level": 4,
 	"date_added": 1565877756940,
-	"last_scraped": 1569058310854,
+	"last_scraped": 1570661335935,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565877756940
 		}
 	],
-	"next_scrape": 1569104362537,
+	"next_scrape": 1570703143101,
 	"category": "plant_sim",
-	"last_update": 1569058310854,
+	"last_update": 1570661335935,
 	"output": [
 		{
 			"args": {},
@@ -49,17 +49,22 @@
 		},
 		{
 			"args": {},
-			"calls": 83276,
+			"calls": 84333,
 			"base": "c:\"8naiyw\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"cards",
 				"er TRA",
+				"der to",
 				"ards\\n",
+				"\\n2169",
+				" resol",
 				"acker T",
 				"ttacker ",
+				"send car",
 				"r TRAPS ",
 				"ins in o",
-				"APS send"
+				"APS send",
+				"169 Atta"
 			],
 			"hits": [
 				{
@@ -93,6 +98,6 @@
 			]
 		}
 	],
-	"updt": 1569058301854,
-	"edit": 97
+	"updt": 1569058528851,
+	"edit": 98
 }
