--- a/abndnd_nowjtq.hk_auction_house.json
+++ b/abndnd_nowjtq.hk_auction_house.json
@@ -1,37 +1,42 @@
 {
 	"_id": "abndnd_nowjtq.hk_auction_house",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "abndnd_nowjtq.hk_auction_house",
 	"sector": "SPC_2500",
 	"sec_level": 4,
 	"date_added": 1563098745814,
-	"last_scraped": 1569042773325,
+	"last_scraped": 1570661003166,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563098745814
 		}
 	],
-	"updt": 1569038848531,
-	"edit": 130,
-	"next_scrape": 1569084333333,
+	"updt": 1569042906487,
+	"edit": 131,
+	"next_scrape": 1570700892485,
 	"category": "dice_roller",
-	"last_update": 1569042773325,
+	"last_update": 1570661003166,
 	"output": [
 		{
 			"args": {},
-			"calls": 1387099,
+			"calls": 1393743,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"s the",
-				"f it ",
-				"2154 ",
+				"xt ^2.",
 				"e only",
+				"card i",
+				"53 to ",
 				" in a ",
 				"t is th",
 				"5 card ",
+				"y\\n2155 ",
+				"\\n2156 i",
+				"If it is",
 				"3 to the",
+				"2154 If ",
 				" to the ",
 				" only\\n2",
 				"\\n2153 to"
