--- a/uknown_c671te.quack.json
+++ b/uknown_c671te.quack.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_c671te.quack",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_c671te.quack",
 	"sector": "VNP_7825",
 	"sec_level": 4,
 	"date_added": 1566460947728,
-	"last_scraped": 1569065087296,
+	"last_scraped": 1570661526098,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 3,
-	"next_scrape": 1569106450378,
+	"next_scrape": 1570706269608,
 	"category": "plant_sim",
-	"last_update": 1569065087296,
+	"last_update": 1570661526098,
 	"output": [
 		{
 			"args": {},
@@ -137,6 +137,18 @@
 				" ERROR ",
 				"X7BE4_FI"
 			]
+		},
+		{
+			"args": {},
+			"calls": 1492,
+			"base": "c:\"51m589\" d:\"<f l n s w>\"\n**\n\n\n\n               \n                Ã\n               ÁÁÁÁ\n                ÁÃ\n               ",
+			"fragments": [
+				"T0XF4_",
+				"ST ERR",
+				"LST0XC",
+				" ERROR ",
+				"X7BE4_FI"
+			]
 		}
 	],
 	"identified": [
@@ -151,6 +163,6 @@
 			]
 		}
 	],
-	"updt": 1569062135371,
-	"edit": 184
+	"updt": 1569065294427,
+	"edit": 185
 }
