--- a/uknown_tuh6rk.stealgc.json
+++ b/uknown_tuh6rk.stealgc.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_tuh6rk.stealgc",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_tuh6rk.stealgc",
 	"sector": "NGC_4040",
 	"sec_level": 4,
 	"date_added": 1565570384834,
-	"last_scraped": 1569065229943,
+	"last_scraped": 1570661566486,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,21 +14,31 @@
 		}
 	],
 	"scrape_ct": 3,
-	"next_scrape": 1569107075448,
+	"next_scrape": 1570706957862,
 	"category": "dice_roller",
-	"last_update": 1569065229943,
+	"last_update": 1570661566486,
 	"output": [
 		{
 			"args": {},
-			"calls": 1873985,
+			"calls": 1884032,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"to ne",
+				"s' ar",
+				"_FILE",
 				"CODE ",
 				"the wo",
+				"re mer",
 				"rage y",
+				"e\":\"ne",
 				"k about",
-				"rk of Co"
+				"header\"",
+				"f the c",
+				": 'Meme",
+				"ymptom o",
+				"rk of Co",
+				"erely a ",
+				"X40_SECT"
 			],
 			"hits": [
 				{
@@ -58,6 +68,6 @@
 			]
 		}
 	],
-	"updt": 1569062135371,
-	"edit": 201
+	"updt": 1569065294427,
+	"edit": 202
 }
