--- a/uknown_ui7f8p.db.json
+++ b/uknown_ui7f8p.db.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_ui7f8p.db",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_ui7f8p.db",
 	"sector": "NGC_1810",
 	"sec_level": 4,
 	"date_added": 1566600461700,
-	"last_scraped": 1569047432908,
+	"last_scraped": 1570661117726,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 14,
-	"next_scrape": 1569089386200,
+	"next_scrape": 1570706174644,
 	"category": "plant_sim",
-	"last_update": 1569047432908,
+	"last_update": 1570661117726,
 	"output": [
 		{
 			"args": {},
@@ -46,7 +46,7 @@
 		},
 		{
 			"args": {},
-			"calls": 96351,
+			"calls": 97575,
 			"base": "c:\"4ucyxm\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"ty wi",
@@ -84,6 +84,6 @@
 			]
 		}
 	],
-	"updt": 1569043130565,
-	"edit": 104
+	"updt": 1569047482650,
+	"edit": 105
 }
