--- a/unknown_4xh4jz.db.json
+++ b/unknown_4xh4jz.db.json
@@ -1,36 +1,44 @@
 {
 	"_id": "unknown_4xh4jz.db",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_4xh4jz.db",
 	"sector": "K_7459",
 	"sec_level": 4,
 	"date_added": 1564371134260,
-	"last_scraped": 1569055000217,
+	"last_scraped": 1570661255079,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564371134260
 		}
 	],
-	"next_scrape": 1569096525294,
+	"next_scrape": 1570707510646,
 	"category": "dice_roller",
-	"last_update": 1569055000217,
+	"last_update": 1570661255079,
 	"output": [
 		{
 			"args": {},
-			"calls": 1956505,
+			"calls": 1966879,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
+				"sic s",
 				"y more",
-				"tandard",
+				"s puts",
+				" in pl",
+				"ures in",
+				"ot devs",
+				"e. ## w",
 				"we're no",
+				"tandards",
 				"s any mo",
 				"rin ## S",
 				"place. #",
 				"o put so",
 				"in place",
-				"c struct"
+				"c struct",
+				"are stan",
+				"andards."
 			],
 			"hits": [
 				{
@@ -66,6 +74,6 @@
 			]
 		}
 	],
-	"updt": 1569051311015,
-	"edit": 180
+	"updt": 1569055143736,
+	"edit": 181
 }
