--- a/unknown_6mixmg.whitelist.json
+++ b/unknown_6mixmg.whitelist.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_6mixmg.whitelist",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_6mixmg.whitelist",
 	"sector": "SPC_8561",
 	"sec_level": 4,
 	"date_added": 1566979293534,
-	"last_scraped": 1569051496100,
+	"last_scraped": 1570661183893,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 4,
-	"next_scrape": 1569092384161,
+	"next_scrape": 1570707486958,
 	"category": "plant_sim",
-	"last_update": 1569051496100,
+	"last_update": 1570661183893,
 	"output": [
 		{
 			"args": {},
@@ -280,6 +280,23 @@
 				"ld bring",
 				", impres"
 			]
+		},
+		{
+			"args": {},
+			"calls": 752,
+			"base": "c:\"jxs8op\" d:\"<f l n s w>\"\n**\n\n\n        \n           Á      Á.\n            Á  ÁÁ Ã ÁÁÁÁ\n        Á  Ã/ÁÃÃ/ÁÁ/ÁÃÃÁÁÁ\n        ÃÁÁÁÁÁ ÃÁ/Ã/ÃÃÃÁ\n        ",
+			"fragments": [
+				"ould b",
+				"l, e, ",
+				"## goo",
+				" obstr",
+				"g to be",
+				"d you c",
+				", e, im",
+				"ng max a",
+				"ld bring",
+				", impres"
+			]
 		}
 	],
 	"identified": [
@@ -304,6 +321,6 @@
 			]
 		}
 	],
-	"updt": 1569047708681,
-	"edit": 116
+	"updt": 1569051536930,
+	"edit": 117
 }
