--- a/unknown_0jkcl8.bot_scam_do_not_run.json
+++ b/unknown_0jkcl8.bot_scam_do_not_run.json
@@ -1,28 +1,28 @@
 {
 	"_id": "unknown_0jkcl8.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_0jkcl8.bot_scam_do_not_run",
 	"sector": "K_2217",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569106334973,
+	"last_scraped": 1570662522388,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569099635753,
-	"edit": 3,
+	"updt": 1569106403335,
+	"edit": 4,
 	"scrape_ct": 8,
-	"next_scrape": 1569106394973,
+	"next_scrape": 1570706446578,
 	"category": "clicker",
-	"last_update": 1569106334973,
+	"last_update": 1570662522388,
 	"output": [
 		{
 			"args": {},
-			"calls": 30432,
+			"calls": 34528,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"X7A_S",
@@ -56,7 +56,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 27079,
+			"calls": 35258,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"X7A_S",
@@ -90,7 +90,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 2803,
+			"calls": 3917,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"X7A_S",
