--- a/uknown_cak1xs.gib_gc.json
+++ b/uknown_cak1xs.gib_gc.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_cak1xs.gib_gc",
 	"type": "fragment",
-	"mode": "dead",
+	"mode": "could not json",
 	"script": "uknown_cak1xs.gib_gc",
 	"sector": "K_8332",
 	"sec_level": 2,
@@ -41,8 +41,8 @@
 			"when": 1569270166069
 		}
 	],
-	"updt": 1569114523963,
-	"edit": 9,
+	"updt": 1569270356432,
+	"edit": 10,
 	"scrape_ct": 18,
 	"next_scrape": 1569108997155,
 	"category": "UNKNOWN CATEGORY",
