--- a/unknown_4gqqp5.decrypt.json
+++ b/unknown_4gqqp5.decrypt.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_4gqqp5.decrypt",
 	"type": "fragment",
-	"mode": "dead",
+	"mode": "could not json",
 	"script": "unknown_4gqqp5.decrypt",
 	"sector": "K_8332",
 	"sec_level": 2,
@@ -41,8 +41,8 @@
 			"when": 1569270166069
 		}
 	],
-	"updt": 1569114523963,
-	"edit": 10,
+	"updt": 1569270356432,
+	"edit": 11,
 	"scrape_ct": 17,
 	"next_scrape": 1569108977109,
 	"category": "UNKNOWN CATEGORY",
