--- a/unknown_yv2hdz.db.json
+++ b/unknown_yv2hdz.db.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_yv2hdz.db",
 	"type": "fragment",
-	"mode": "dead",
+	"mode": "could not json",
 	"script": "unknown_yv2hdz.db",
 	"sector": "K_8332",
 	"sec_level": 2,
@@ -41,8 +41,8 @@
 			"when": 1569270166069
 		}
 	],
-	"updt": 1569114523963,
-	"edit": 10,
+	"updt": 1569270356432,
+	"edit": 11,
 	"scrape_ct": 18,
 	"next_scrape": 1569108987155,
 	"category": "UNKNOWN CATEGORY",
