--- a/unknown_91xrzs.jake.json
+++ b/unknown_91xrzs.jake.json
@@ -1,28 +1,28 @@
 {
 	"_id": "unknown_91xrzs.jake",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_91xrzs.jake",
 	"sector": "NGC_2868",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569141994654,
+	"last_scraped": 1570664221418,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569139552910,
-	"edit": 12,
+	"updt": 1569142037272,
+	"edit": 13,
 	"scrape_ct": 1,
-	"next_scrape": 1569142054654,
+	"next_scrape": 1570706022681,
 	"category": "coin_flipper",
-	"last_update": 1569141994654,
+	"last_update": 1570664221418,
 	"output": [
 		{
 			"args": {},
-			"calls": 113093,
+			"calls": 126959,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"thing",
