--- a/unknown_qjibis.xfer.json
+++ b/unknown_qjibis.xfer.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_qjibis.xfer",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_qjibis.xfer",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569118886007,
+	"last_scraped": 1570663648561,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569113848324,
-	"edit": 5,
-	"next_scrape": 1569159184796,
+	"updt": 1569119031713,
+	"edit": 6,
+	"next_scrape": 1570703672969,
 	"category": "clicker",
-	"last_update": 1569118886007,
+	"last_update": 1570663648561,
 	"output": [
 		{
 			"args": {},
-			"calls": 33432,
+			"calls": 40575,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"lack ",
@@ -60,7 +60,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 46824,
+			"calls": 50868,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"lack ",
@@ -99,7 +99,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 6738,
+			"calls": 7730,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"lack ",
