--- a/uknown_ch50pw.blibs.json
+++ b/uknown_ch50pw.blibs.json
@@ -1,28 +1,28 @@
 {
 	"_id": "uknown_ch50pw.blibs",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_ch50pw.blibs",
 	"sector": "VNP_9534",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569117170061,
+	"last_scraped": 1570663449162,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569112038935,
-	"edit": 5,
+	"updt": 1569117228409,
+	"edit": 6,
 	"scrape_ct": 9,
-	"next_scrape": 1569117230061,
+	"next_scrape": 1570703320466,
 	"category": "fishie_tank",
-	"last_update": 1569117170061,
+	"last_update": 1570663449162,
 	"output": [
 		{
 			"args": {},
-			"calls": 41716,
+			"calls": 49622,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"ike c",
@@ -54,7 +54,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 4200,
+			"calls": 4740,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -91,7 +91,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 32744,
+			"calls": 44266,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				"ike c",
