--- a/uknown_lqxcau.inventory.json
+++ b/uknown_lqxcau.inventory.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_lqxcau.inventory",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "npc",
 	"script": "uknown_lqxcau.inventory",
 	"sector": "NGC_4527",
 	"sec_level": 3,
 	"date_added": 1563655647379,
-	"last_scraped": 1569124814701,
+	"last_scraped": 1570663920647,
 	"script_log": [
 		{
 			"type": "added",
@@ -21,19 +21,19 @@
 			}
 		]
 	],
-	"updt": 1569121063143,
-	"edit": 245,
+	"updt": 1570663907457,
+	"edit": 247,
 	"pl_output": "`1For more information about using inventory, check out {` help: true`1 }`\n",
-	"next_scrape": 1569208576801,
+	"next_scrape": 1570709626071,
 	"scrape_ct": 13,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1569124814701,
+	"last_update": 1570663920647,
 	"output": [
 		{
 			"args": {
 				"sort": "count"
 			},
-			"calls": 1858,
+			"calls": 2287,
 			"base": "`1For more information about using inventory, check out {` help: true`1 }`\n",
 			"fragments": [
 				"than ",
