--- a/unknown_z6bucy.ds.json
+++ b/unknown_z6bucy.ds.json
@@ -6,23 +6,23 @@
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569117520879,
+	"last_scraped": 1570663486715,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569112266275,
-	"edit": 5,
+	"updt": 1569117678456,
+	"edit": 6,
 	"scrape_ct": 8,
-	"next_scrape": 1569117580879,
+	"next_scrape": 1570706455885,
 	"category": "fishie_tank",
-	"last_update": 1569117520879,
+	"last_update": 1570663498406,
 	"output": [
 		{
 			"args": {},
-			"calls": 30417,
+			"calls": 38820,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"ld 'w",
@@ -54,7 +54,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 4972,
+			"calls": 5573,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -133,6 +133,11 @@
 				"Perhaps",
 				"thinking"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"do": "clean"
 		}
 	]
 }
