--- a/uknown_6s2peb.dcg.json
+++ b/uknown_6s2peb.dcg.json
@@ -1,28 +1,28 @@
 {
 	"_id": "uknown_6s2peb.dcg",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_6s2peb.dcg",
 	"sector": "HJG_8615",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569143905196,
+	"last_scraped": 1570664804251,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569140002159,
-	"edit": 12,
+	"updt": 1569144064359,
+	"edit": 13,
 	"scrape_ct": 3,
-	"next_scrape": 1569143965196,
+	"next_scrape": 1570707442766,
 	"category": "dice_roller",
-	"last_update": 1569143905196,
+	"last_update": 1570664804251,
 	"output": [
 		{
 			"args": {},
-			"calls": 108102,
+			"calls": 119579,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"152 th",
