--- a/uknown_dobbrb.viewk3ys.json
+++ b/uknown_dobbrb.viewk3ys.json
@@ -1,24 +1,24 @@
 {
 	"_id": "uknown_dobbrb.viewk3ys",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_dobbrb.viewk3ys",
 	"sector": "NGC_6016",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569143541428,
+	"last_scraped": 1570664653609,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569140002159,
-	"edit": 13,
+	"updt": 1569143613009,
+	"edit": 14,
 	"scrape_ct": 1,
-	"next_scrape": 1569143601428,
+	"next_scrape": 1570708187441,
 	"category": "plant_sim",
-	"last_update": 1569143541428,
+	"last_update": 1570664653609,
 	"output": [
 		{
 			"args": {},
@@ -44,6 +44,19 @@
 						"amage to"
 					]
 				}
+			]
+		},
+		{
+			"args": {},
+			"calls": 930,
+			"base": "c:\"jccvvi\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 Ã\n                 ",
+			"fragments": [
+				"deal d",
+				".\\n20F",
+				"2101 th",
+				"r's stac",
+				"eal dama",
+				"amage to"
 			]
 		}
 	],
