--- a/unknown_u8unay.search.json
+++ b/unknown_u8unay.search.json
@@ -1,24 +1,24 @@
 {
 	"_id": "unknown_u8unay.search",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_u8unay.search",
 	"sector": "NGC_6016",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569143792727,
+	"last_scraped": 1570664774671,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569140002159,
-	"edit": 12,
+	"updt": 1569143839868,
+	"edit": 13,
 	"scrape_ct": 0,
-	"next_scrape": 1569143852727,
+	"next_scrape": 1570709412129,
 	"category": "plant_sim",
-	"last_update": 1569143792727,
+	"last_update": 1570664774671,
 	"output": [
 		{
 			"args": {},
@@ -40,6 +40,17 @@
 						"ar.\\n2142"
 					]
 				}
+			]
+		},
+		{
+			"args": {},
+			"calls": 1642,
+			"base": "c:\"l1a2jl\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
+			"fragments": [
+				"on.\\n2",
+				"are one",
+				"r Erin R",
+				"ar.\\n2142"
 			]
 		}
 	],
