--- a/uknown_864wmx.bot_brain_calc.json
+++ b/uknown_864wmx.bot_brain_calc.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_864wmx.bot_brain_calc",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_864wmx.bot_brain_calc",
 	"sector": "K_2217",
 	"sec_level": 4,
 	"date_added": 1563311562266,
-	"last_scraped": 1569144407860,
+	"last_scraped": 1570664914546,
 	"script_log": [
 		{
 			"type": "added",
@@ -22,16 +22,16 @@
 		]
 	],
 	"pl_output": "To use, either:\n1. Provide `Nu`:`V#s.sys.upgrades` and optionally i:<array of indices>.\n2. Provide `Ncost` and `Ncooldown`.",
-	"next_scrape": 1569144467860,
-	"updt": 1569140002159,
-	"edit": 1457,
+	"next_scrape": 1570708117792,
+	"updt": 1569144513646,
+	"edit": 1458,
 	"scrape_ct": 1,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1569144407860,
+	"last_update": 1570664914546,
 	"output": [
 		{
 			"args": {},
-			"calls": 108617,
+			"calls": 114309,
 			"base": "To use, either:\n1. Provide `Nu`:`V#s.sys.upgrades` and optionally i:<array of indices>.\n2. Provide `Ncost` and `Ncooldown`.",
 			"fragments": [
 				"efunc",
