--- a/unknown_vu8sig.s.json
+++ b/unknown_vu8sig.s.json
@@ -1,28 +1,28 @@
 {
 	"_id": "unknown_vu8sig.s",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_vu8sig.s",
 	"sector": "NGC_6016",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569143853560,
+	"last_scraped": 1570664785663,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569143839868,
-	"edit": 13,
+	"updt": 1569144064359,
+	"edit": 14,
 	"scrape_ct": 1,
-	"next_scrape": 1569143913560,
+	"next_scrape": 1570705144833,
 	"category": "dice_roller",
-	"last_update": 1569143853560,
+	"last_update": 1570664785663,
 	"output": [
 		{
 			"args": {},
-			"calls": 111892,
+			"calls": 117913,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"r sid",
