--- a/unknown_yv7jeg.desk.json
+++ b/unknown_yv7jeg.desk.json
@@ -1,28 +1,28 @@
 {
 	"_id": "unknown_yv7jeg.desk",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_yv7jeg.desk",
 	"sector": "VNP_9171",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569143181130,
+	"last_scraped": 1570664583903,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569139777626,
-	"edit": 12,
+	"updt": 1569143388461,
+	"edit": 13,
 	"scrape_ct": 4,
-	"next_scrape": 1569143241130,
+	"next_scrape": 1570710629193,
 	"category": "coin_flipper",
-	"last_update": 1569143181130,
+	"last_update": 1570664583903,
 	"output": [
 		{
 			"args": {},
-			"calls": 105158,
+			"calls": 109800,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"em as",
