--- a/uknown_864wmx.t1.json
+++ b/uknown_864wmx.t1.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_864wmx.t1",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_864wmx.t1",
 	"sector": "K_2217",
 	"sec_level": 4,
 	"date_added": 1563311793098,
-	"last_scraped": 1569158724013,
+	"last_scraped": 1570665930004,
 	"script_log": [
 		{
 			"type": "added",
@@ -21,16 +21,16 @@
 			}
 		]
 	],
-	"updt": 1569155118887,
-	"edit": 1460,
+	"updt": 1569158953587,
+	"edit": 1461,
 	"pl_output": "Usage:\n`Nscrape`:`V#s.t1.corp` -- self explanatory. Optionally pass format:true to return the locs formatted for cracking.\n`Ncrack`:`V#s.t1.npc` -- self explanatory.",
-	"next_scrape": 1569205287398,
+	"next_scrape": 1570707293971,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1569158724013,
+	"last_update": 1570665930004,
 	"output": [
 		{
 			"args": {},
-			"calls": 1947338,
+			"calls": 1994974,
 			"base": "Usage:\n`Nscrape`:`V#s.t1.corp` -- self explanatory. Optionally pass format:true to return the locs formatted for cracking.\n`Ncrack`:`V#s.t1.npc` -- self explanatory.",
 			"fragments": [
 				"nervo",
