--- a/uknown_92vtu0.mktable.json
+++ b/uknown_92vtu0.mktable.json
@@ -1,23 +1,23 @@
 {
 	"_id": "uknown_92vtu0.mktable",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_92vtu0.mktable",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569146675733,
+	"last_scraped": 1570665508427,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569140681968,
-	"edit": 13,
-	"next_scrape": 1569190869027,
+	"updt": 1569146770217,
+	"edit": 14,
+	"next_scrape": 1570709011863,
 	"category": "plant_sim",
-	"last_update": 1569146675733,
+	"last_update": 1570665508427,
 	"output": [
 		{
 			"args": {},
@@ -43,6 +43,19 @@
 						"\\n2166 TR"
 					]
 				}
+			]
+		},
+		{
+			"args": {},
+			"calls": 980,
+			"base": "c:\"c6k61e\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
+			"fragments": [
+				"irst.",
+				"ing pl",
+				"er\\n216",
+				" initia",
+				"s their ",
+				"\\n2166 TR"
 			]
 		}
 	],
