--- a/uknown_bofn3d.external_yg40iz.json
+++ b/uknown_bofn3d.external_yg40iz.json
@@ -1,23 +1,23 @@
 {
 	"_id": "uknown_bofn3d.external_yg40iz",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_bofn3d.external_yg40iz",
 	"sector": "K_2217",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569147179449,
+	"last_scraped": 1570665638791,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569140907219,
-	"edit": 14,
-	"next_scrape": 1569187443467,
+	"updt": 1569147220959,
+	"edit": 15,
+	"next_scrape": 1570709606323,
 	"category": "plant_sim",
-	"last_update": 1569147179449,
+	"last_update": 1570665638791,
 	"output": [
 		{
 			"args": {},
@@ -73,6 +73,20 @@
 						"al asset"
 					]
 				}
+			]
+		},
+		{
+			"args": {},
+			"calls": 1360,
+			"base": "c:\"85lkwv\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
+			"fragments": [
+				"ly 28",
+				"OS/Co",
+				" and c",
+				"e') and",
+				"2062. E",
+				"d to hav",
+				"al asset"
 			]
 		}
 	],
