--- a/unknown_0axb7v.npc.json
+++ b/unknown_0axb7v.npc.json
@@ -1,24 +1,24 @@
 {
 	"_id": "unknown_0axb7v.npc",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_0axb7v.npc",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569146806308,
+	"last_scraped": 1570665528175,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569140907219,
-	"edit": 13,
+	"updt": 1569146995272,
+	"edit": 14,
 	"scrape_ct": 5,
-	"next_scrape": 1569146866308,
+	"next_scrape": 1570706211157,
 	"category": "plant_sim",
-	"last_update": 1569146806308,
+	"last_update": 1570665528175,
 	"output": [
 		{
 			"args": {},
@@ -50,6 +50,22 @@
 						"s | BODY"
 					]
 				}
+			]
+		},
+		{
+			"args": {},
+			"calls": 582,
+			"base": "c:\"j04yl2\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
+			"fragments": [
+				"SUBJ ",
+				"'m in",
+				" in h",
+				"tive p",
+				"ted in",
+				"ested ",
+				"DY I'm",
+				" inter",
+				"s | BODY"
 			]
 		}
 	],
