--- a/unknown_1773wk.shfflr_key.json
+++ b/unknown_1773wk.shfflr_key.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_1773wk.shfflr_key",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_1773wk.shfflr_key",
 	"sector": "SPC_6164",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569150262318,
+	"last_scraped": 1570665779479,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569149479483,
-	"edit": 16,
-	"next_scrape": 1569195224437,
+	"updt": 1569150379697,
+	"edit": 17,
+	"next_scrape": 1570708062594,
 	"category": "coin_flipper",
-	"last_update": 1569150262318,
+	"last_update": 1570665779479,
 	"output": [
 		{
 			"args": {},
-			"calls": 128566,
+			"calls": 138720,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"of th",
