--- a/unknown_1fif7m.specs.json
+++ b/unknown_1fif7m.specs.json
@@ -1,24 +1,24 @@
 {
 	"_id": "unknown_1fif7m.specs",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_1fif7m.specs",
 	"sector": "K_2217",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569147247071,
+	"last_scraped": 1570665660301,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569140907219,
-	"edit": 13,
+	"updt": 1569147446548,
+	"edit": 14,
 	"scrape_ct": 5,
-	"next_scrape": 1569147307071,
+	"next_scrape": 1570708807181,
 	"category": "plant_sim",
-	"last_update": 1569147247071,
+	"last_update": 1570665660301,
 	"output": [
 		{
 			"args": {},
@@ -46,6 +46,20 @@
 						" of me\\n2"
 					]
 				}
+			]
+		},
+		{
+			"args": {},
+			"calls": 1063,
+			"base": "c:\"w9l07b\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
+			"fragments": [
+				"'re ma",
+				"un of m",
+				")\\n2040 ",
+				" You're ",
+				"e\\n203F :",
+				".\\n203E Y",
+				" of me\\n2"
 			]
 		}
 	],
