--- a/unknown_puquph.weather.json
+++ b/unknown_puquph.weather.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_puquph.weather",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_puquph.weather",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569146866877,
+	"last_scraped": 1570665538002,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569140907219,
-	"edit": 13,
-	"next_scrape": 1569192586238,
+	"updt": 1569146995272,
+	"edit": 14,
+	"next_scrape": 1570711286546,
 	"category": "coin_flipper",
-	"last_update": 1569146866877,
+	"last_update": 1570665538002,
 	"output": [
 		{
 			"args": {},
-			"calls": 118878,
+			"calls": 125211,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ses. T",
