--- a/uknown_56z58x.clear.json
+++ b/uknown_56z58x.clear.json
@@ -1,23 +1,23 @@
 {
 	"_id": "uknown_56z58x.clear",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_56z58x.clear",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569146616538,
+	"last_scraped": 1570665489564,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569140681968,
-	"edit": 15,
-	"next_scrape": 1569190578935,
+	"updt": 1569146770217,
+	"edit": 16,
+	"next_scrape": 1570705659773,
 	"category": "plant_sim",
-	"last_update": 1569146616538,
+	"last_update": 1570665489564,
 	"output": [
 		{
 			"args": {},
@@ -47,6 +47,21 @@
 						" still h"
 					]
 				}
+			]
+		},
+		{
+			"args": {},
+			"calls": 576,
+			"base": "c:\"ip9w6z\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
+			"fragments": [
+				"is st",
+				"ching",
+				"o us. ",
+				"ently. ",
+				"still ha",
+				"ferently",
+				"I've sta",
+				" still h"
 			]
 		}
 	],
