--- a/uknown_g6pj2l.obtuse.json
+++ b/uknown_g6pj2l.obtuse.json
@@ -1,28 +1,28 @@
 {
 	"_id": "uknown_g6pj2l.obtuse",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_g6pj2l.obtuse",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569146737723,
+	"last_scraped": 1570665518058,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569140907219,
-	"edit": 13,
+	"updt": 1569146770217,
+	"edit": 14,
 	"scrape_ct": 0,
-	"next_scrape": 1569146797723,
+	"next_scrape": 1570710525432,
 	"category": "coin_flipper",
-	"last_update": 1569146737723,
+	"last_update": 1570665518058,
 	"output": [
 		{
 			"args": {},
-			"calls": 118138,
+			"calls": 126115,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"t? ## ",
