--- a/unknown_ll1h7z.fishie_tank.json
+++ b/unknown_ll1h7z.fishie_tank.json
@@ -1,23 +1,23 @@
 {
 	"_id": "unknown_ll1h7z.fishie_tank",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_ll1h7z.fishie_tank",
 	"sector": "VNP_9275",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569147046679,
+	"last_scraped": 1570665590336,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569140907219,
-	"edit": 13,
-	"next_scrape": 1569190181416,
+	"updt": 1569147220959,
+	"edit": 14,
+	"next_scrape": 1570706593730,
 	"category": "plant_sim",
-	"last_update": 1569147046679,
+	"last_update": 1570665590336,
 	"output": [
 		{
 			"args": {},
@@ -77,6 +77,21 @@
 						"itored s"
 					]
 				}
+			]
+		},
+		{
+			"args": {},
+			"calls": 627,
+			"base": "c:\"tluzmp\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
+			"fragments": [
+				" in o",
+				"uce di",
+				"rator-",
+				"onitor",
+				"irect ",
+				"ement i",
+				" direct",
+				"itored s"
 			]
 		}
 	],
