--- a/unknown_yprlbk.big_red_button.json
+++ b/unknown_yprlbk.big_red_button.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_yprlbk.big_red_button",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_yprlbk.big_red_button",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569154582479,
+	"last_scraped": 1570665889393,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569123092724,
-	"edit": 7,
-	"next_scrape": 1569197649830,
+	"updt": 1569154667859,
+	"edit": 8,
+	"next_scrape": 1570709774805,
 	"category": "clicker",
-	"last_update": 1569154582479,
+	"last_update": 1570665889393,
 	"output": [
 		{
 			"args": {},
-			"calls": 47038,
+			"calls": 54409,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"ubmit",
@@ -49,7 +49,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 49327,
+			"calls": 62878,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"ubmit",
@@ -77,7 +77,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 7263,
+			"calls": 8275,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"ubmit",
